After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 539093 - <font> tag in character description
<font> tag in character description
Status: RESOLVED FIXED
Product: gucharmap
Classification: Core
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: gucharmap maintainers
gucharmap maintainers
Depends on:
Blocks:
 
 
Reported: 2008-06-19 07:20 UTC by Gil Forcada
Modified: 2017-01-28 21:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot showing a <font> tag (102.38 KB, image/png)
2008-06-19 07:23 UTC, Gil Forcada
Details

Description Gil Forcada 2008-06-19 07:20:17 UTC
Please describe the problem:
While reviewing a translation I found this (image attached).

I don't know who to blame, but as I found it in gucharmap I fill here, re-assign it to to correct product if it's not the right one this.

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Gil Forcada 2008-06-19 07:23:10 UTC
Created attachment 113026 [details]
Screenshot showing a <font> tag

As you can see there's a <font> tag in the link section, that I think souldn't have to be there
Comment 2 Christian Persch 2008-06-21 19:48:38 UTC
Hmm. That "<font>" comes from the unicode data itself... http://www.unicode.org/Public/UNIDATA/UCD.html explains what it means. I guess we should use that instead of just showing "<font>" as-is.
Comment 3 Matthias Clasen 2009-03-10 02:52:01 UTC
Indeed, we should show the following instead:

<font>   	A font variant (e.g. a blackletter form).
<noBreak>   	A no-break version of a space or hyphen.
<initial>   	An initial presentation form (Arabic).
<medial>   	A medial presentation form (Arabic).
<final>   	A final presentation form (Arabic).
<isolated>   	An isolated presentation form (Arabic).
<circle>   	An encircled form.
<super>   	A superscript form.
<sub>   	A subscript form.
<vertical>   	A vertical layout presentation form.
<wide>   	A wide (or zenkaku) compatibility character.
<narrow>   	A narrow (or hankaku) compatibility character.
<small>   	A small variant form (CNS compatibility).
<square>   	A CJK squared font variant.
<fraction>   	A vulgar fraction form.
<compat>   	Otherwise unspecified compatibility character.