charmap: Parse compatibility formatting tags

https://bugzilla.gnome.org/show_bug.cgi?id=539093